Here's an edited summary of the commit log. It doesn't include small changes or changes to test cases.

h2. Changes in v3.5.0 (from 2.4.1)

* Add composer.json to allow installation via the "composer PHP package manager":https://getcomposer.org/.
* Regex improvements (issues "#78":https://github.com/netcarver/textile/issues/78, "#81":https://github.com/netcarver/textile/issues/81 and "#83":https://github.com/netcarver/textile/issues/83.)
* Allow pre-encoded '>' and '<' as alignments.
* Self-referencing links can now be combined with link aliases. eg. @"$":alias1@ is now possible.
* Fix memory leak and performance degradation when calling same Textile object multiple times.
* Do not double-encode @+@ or @%@ in urls.
* Remove legacy SVN lines and old Textpattern integration methods.
* Refactored code, removing deprecated methods.
* Fix undefined variable in Redcloth-style definition lists.
* Improvements to image handling (closes "#69":https://github.com/netcarver/textile/issues/69).
* Extend recognition of dimension sign to more complex cases. Eg...
*# @-0.5 x -.1 x +100@ => %-0.5 × -.1 × +100%
*# @10 x -€ 110,00@ => %10 × -€ 110,00% (this replacement is available only if unicode support is included in your PCRE implementation and any character that is a currency symbol should work)
* Change parse tokens to further prevent glyphs from matching them internally.
* Improve handling of textile within table cells without leading or trailing spaces (eg. @|"$":https://github.com"|_Here we are_|==code==|@ etc.)
* Improve handling of lists within table cells. (closes "#79":https://github.com/netcarver/textile/issues/79)
* Allow mixed nested lists (Already supported in Redcloth).
* Improve detection of open quotes in situations like @["(Berk.) Hilton"]@ (where the open quote was previously was incorrectly detected encoded.)