@@ -1,5 +1,10 @@
 Here's an edited summary of the commit log. It doesn't include small changes or changes to test cases.
 
+h2. Changes in master (from 3.5.0)
+
+* Remove horizontal alignement from inline elements (closes "#66":https://github.com/netcarver/textile/issues/66.)
+
+
 h2. Changes in v3.5.0 (from 2.4.1)
 
 * Add composer.json to allow installation via the "composer PHP package manager":https://getcomposer.org/.
